fix: remove unwanted expands/wraps on input tags (#425)

--- a/resources/assets/css/_forms.css
+++ b/resources/assets/css/_forms.css
@@ -244,7 +244,7 @@
 }
 
 .taggle_input {
-    @apply max-w-full my-1 bg-none;
+    @apply w-0 my-1 bg-none;
 }
 
 .taggle_sizer {
